Actualizado Header: menú solo con inicio, mi historia, colección y contacto + traducciones y CSS prolijo

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,4 +1,5 @@
 {
+  "home": "Home",
   "hello_name": "Hello, I'm {{name}}",
   "bio_paragraph_1": "I am Argentine and a few years ago I moved to the United States, where I studied Biology and started my professional training. Today, at 24, I still keep my passion for nature and animals alive.",
   "bio_paragraph_2": "Photography became my way of connecting with that world I love so much, observing carefully and telling stories through images. This page is my space to share that admiration.",
