--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -1,4 +1,5 @@
 {
+  "home": "Inicio",
   "hello_name": "Hola, soy {{name}}",
   "bio_paragraph_1": "Soy argentino y hace algunos años me mudé a Estados Unidos, donde estudié Biología y comencé a formarme profesionalmente. Hoy, con 24 años, sigo manteniendo viva mi pasión por la naturaleza y los animales.",
   "bio_paragraph_2": "La fotografía se convirtió en mi forma de conectar con ese mundo que tanto amo, de observar con atención y contar historias a través de imágenes. Esta página es mi espacio para compartir esa admiración.",
